k8s/hotelix_client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotelix-client
spec:
  selector:
    matchLabels:
      app: hotelix-client
  replicas: 1
  template:
    metadata:
      labels:
        app: hotelix-client
    spec:
      containers:
      - name: hotelixclient
        image: localhost:5000/dominqo/hotelix_client:latest        
        # envFrom:
        #   - configMapRef:
        #       name: globo-identity-config
        #   - secretRef:
        #       name: globoconn-secrets 
        resources:
          limits:
            memory: "228Mi"
            cpu: "200m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hotelixclient-service
spec:
  selector:
    app: hotelix-client  
  type: ClusterIP
  ports:
    - protocol: TCP 
      port: 5005
      targetPort: 80
