k8s/hotelix_identityserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotelix-identity  
spec:
  selector:
    matchLabels:
      app: hotelix-identity
  replicas: 1
  template:
    metadata:
      labels:
        app: hotelix-identity
    spec:
      containers:
      - name: is4
        image: localhost:5000/dominqo/hotelix_identityserver:latest        
        # envFrom:
        #   - configMapRef:
        #       name: globo-identity-config
        #   - secretRef:
        #       name: globoconn-secrets 
        livenessProbe:
          httpGet:
            path: /.well-known/openid-configuration
            port: 80
          initialDelaySeconds: 20
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /.well-known/openid-configuration
            port: 80
          initialDelaySeconds: 20
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 3       
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
      # dnsConfig:
      #   nameservers:
      #     - 10.96.0.10
      #   searches:
      #     - default.svc.cluster.local
      #     - svc.cluster.local
      #     - cluster.local
      #     - hotelix.one
      #   options:
      #     - name: ndots
      #       value: "5"
      #     - name: edns0
      

---
apiVersion: v1
kind: Service
metadata:
  name: hotelixis-service
spec:
  selector:
    app: hotelix-identity  
  type: ClusterIP
  ports:
    - protocol: TCP 
      port: 80
      targetPort: 80
