k8s/hotelix_offer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotelix-offer
spec:
  selector:
    matchLabels:
      app: hotelix-offer
  replicas: 1
  template:
    metadata:
      labels:
        app: hotelix-offer
    spec:
      containers:
      - name: hotelixoffer
        image: localhost:5000/dominqo/hotelix_offer:latest        
        # envFrom:
        #   - configMapRef:
        #       name: globo-identity-config
        #   - secretRef:
        #       name: globoconn-secrets 
        resources:
          limits:
            memory: "228Mi"
            cpu: "200m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hotelixoffer-service
spec:
  selector:
    app: hotelix-offer  
  type: ClusterIP
  ports:
    - protocol: TCP 
      port: 5006
      targetPort: 80
