k8s/hotelix_reservations.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotelix-reservations
spec:
  selector:
    matchLabels:
      app: hotelix-reservations
  replicas: 1
  template:
    metadata:
      labels:
        app: hotelix-reservations
    spec:
      containers:
      - name: hotelixreservations
        image: localhost:5000/dominqo/hotelix_reservations:latest        
        # envFrom:
        #   - configMapRef:
        #       name: globo-identity-config
        #   - secretRef:
        #       name: globoconn-secrets 
        resources:
          limits:
            memory: "228Mi"
            cpu: "200m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hotelixreservations-service
spec:
  selector:
    app: hotelix-reservations  
  type: ClusterIP
  ports:
    - protocol: TCP 
      port: 5002
      targetPort: 80
