k8s/hotelix_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotelix-ingress  
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  tls:
  - hosts:
      - id-local.hotelix.one
    secretName: idlocalhotelix-tls
  - hosts:
      - hotelix.one
    secretName: hotelix-tls
  - hosts:
      - seq.hotelix.one
    secretName: seqhotelix-tls
  rules:
  - host: seq.hotelix.one
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hotelixseq-service
            port: 
              number: 80  

  - host: id-local.hotelix.one
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hotelixis-service
            port:
              number: 80

  - host: hotelix.one
    http:
      paths:
      - pathType: Prefix
        path: /api/offer/
        backend:
          service:
            name: hotelixoffer-service
            port:
              number: 5006
      - pathType: Prefix
        path: /api/reservations/
        backend:
          service:
            name: hotelixreservations-service
            port:
              number: 5002
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hotelixclient-service
            port:
              number: 5005
